package com.yokudlela.kitchen.business.model

enum class Status {
    OPEN,
    IN_PROGRESS,
    FINISHED,
    PARTIALLY_FINISHED,
    FAILED
}